--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -17,7 +17,10 @@ jobs:
           command_timeout: 45m
           script: |
             cd Code/GUI_Lists
-            touch 'oi.txt'
+            
+            eval $(ssh-agent)
+            ssh-add ~/.ssh/199
+            
             echo "Updating branch ${{ env.BRANCH_NAME }}"
             
             git pull
